# django-rest-docker-boilerplate

./: .gitignore  README.md  compose.dev.yml  compose.prod.yml  dev.env  docker-compose.dev.yml  docker-compose.prod.yml  init_production_volumes.sh  prod.env
docker/caddy/: Caddyfile
docker/django/: Dockerfile  entrypoint
docker/mkdocs/: Dockerfile  entrypoint  mkdocs.yml
docker/postgres/: Dockerfile
docker/postgres/maintenance/: cleanup
docs/: .pages  db_schema.md  index.md
docs/app/: .pages  applications.md
docs/development_plan/: .pages  index.md
docs/external_services/: .pages  index.md
src/: manage.py  pyproject.toml  requirements.in  requirements.txt
src/accounts/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py
src/accounts/api/: permissions.py  router.py  serializers.py  tests.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_user_is_verified.py
src/accounts/tests/: test_models.py
src/config/: asgi.py  celery.py  settings.py  urls.py
src/config/settings/: base.py  dev.py  prod.py  test.py
src/config/templates/: base.html
src/config/templates/email/: activation_email.html
src/core/: middleware.py
src/core/management/commands/: clear_cache.py
src/core/templatetags/: core_tags.py
